# VaultSeed

./: .envrc  .gitattributes  .gitignore  Cargo.toml  build.rs  index.html
.cargo/: config.toml
.github/workflows/: cargo-clippy-fix.yml  cargo-fix.yml  check.yml  release.yml  release_quirk.yml  testes.yml  testes_quirk.yml  update-cargo-lock.yml
Console/: Cargo.toml
Console/src/: display.rs  input.rs  lib.rs  navigation.rs  tutorial.rs
Core/: Cargo.toml
Core/src/: core.rs  crypto.rs  errors.rs  generator.rs  lib.rs  models.rs
Core/src/services/: crypto.rs  file.rs  generator.rs  mod.rs
Core/src/tests/: aead_tests.rs  app_state.rs  business_logic.rs  common.rs  concurrency_race.rs  deterministic_vectors.rs  export_and_generation.rs  file_service_atomic.rs  file_service_impl_stress.rs  frozen_integration.rs  kext_hardware.rs  large_list_enumeration.rs  lifecycle.rs  local_state.rs  lock_safety.rs  master_key.rs  mod.rs  proptest_aead.rs  proptest_bytes_to_derive.rs  proptest_normalize.rs  proptest_paths.rs  rotate_master_key_integration.rs  rotation_and_frozen.rs  session_and_crypto.rs  session_hmac_vs_wrong_key.rs  static_password_lifecycle_extended.rs  static_passwords.rs
Gui/: Cargo.toml
Gui/src/: android_native.rs  auth.rs  benchmark.rs  devices.rs  domains.rs  export.rs  helpers.rs  lib.rs  localstate.rs  restrictions.rs  search.rs  session.rs  static_passwords.rs  tutorial.rs
Slint/: Cargo.toml  build.rs
Slint/ui/: app_window.slint  main.slint
Slint/ui/components/: shared_components.slint  sidebar_components.slint  tutorial_modal.slint
Slint/ui/views/: benchmark_view.slint  devices_view.slint  domains_view.slint  export_view.slint  login_view.slint  restrictions_view.slint  search_view.slint  session_view.slint  settings_view.slint  static_passwords_view.slint
Wasm/extension/: README.md  manifest.json  popup.html  popup.js  warning-modal.js
Wasm/site/: warning-modal.js
Wasm/static/: README.md  index.html  index.js  warning-modal.js
Wasm/static/pkg/: README.md  package.json  vaultseed.d.ts  vaultseed.js  vaultseed_bg.wasm.d.ts
android/: build.gradle  gradlew  gradlew.bat  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/projetopap/vaultseed/: FilePickerActivity.java
src/: lib.rs  main.rs
