[package]
name = "vaultseed-console"
version = "0.5.4"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
desktop = []

clipboard = ["arboard"]

[dependencies]
vaultseed-core    = { path = "../Core" }

crossterm         = "0.29.0"
rpassword         = "7.5.4"
hex               = "0.4.3"
uuid              = { version = "1.23.2", features = ["v4", "serde"] }
zeroize           = "1.8.2"
serde_json        = "1.0.150"

[target.'cfg(not(any(target_arch = "wasm32", target_os = "android", target_os = "ios")))'.dependencies]
arboard           = { version = "3.6.1", optional = true }
