[package]
name = "vaultseed-core"
version = "0.5.4"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]

# Crypto
argon2            = "0.5.3"
chacha20          = "0.10.0"
chacha20poly1305  = "0.10.1"
hmac              = "0.13.0"
hkdf              = "0.13.0"
pbkdf2            = "0.13.0"
sha2              = "0.11.0"
subtle            = "2.6.1"
tiny-keccak       = { version = "2.0.2", features = ["kmac"] }

# Random
getrandom         = "0.4.2"

# Serialization
serde             = { version = "1.0.228", features = ["derive"] }
serde_json        = "1.0.150"

# IDs and time
chrono            = { version = "0.4.44", features = ["serde", "wasmbind"] }
uuid              = { version = "1.23.2",   features = ["v4", "serde"] }
web-time          = "1.1.0"

# Text/encoding
hex               = "0.4.3"
idna              = "1.1.0"
unicode-normalization = "0.1.25"
emojis = "0.6"

# Numeric
num-bigint        = "0.4.6"
num-integer       = "0.1.46"
num-traits        = "0.2.19"

# Errors
thiserror         = "2.0.18"

# Memory security
zeroize           = "1.8.2"

# System
sysinfo           = "0.39.3"

# WASM - uuid e getrandom precisam de uma fonte de aleatoriedade explícita em wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom         = { version = "0.4.2", features = ["wasm_js"] }
uuid              = { version = "1.23.2",   features = ["v4", "serde", "js"] }
getrandom_legacy  = { package = "getrandom", version = "0.2", features = ["js"] }

# Acesso a cookies (configuração local) e localStorage (sessão interina) do navegador
web-sys           = { version = "0.3", features = [
    "Window", "Storage", "Document", "HtmlDocument", "Blob", "BlobPropertyBag",
    "Url", "HtmlAnchorElement", "HtmlInputElement", "FileReader", "File",
    "FileList", "Event", "EventTarget",
] }
wasm-bindgen      = "0.2"
js-sys            = "0.3"

[dev-dependencies]
proptest          = "1.11.0"
